Test/git-issues/git-issue-324.dfy.expect
git-issue-324.dfy(27,18): Error: The abstract import named Impl1 (using :) may only occur within an abstract module declaration
1 resolution/type errors detected in git-issue-324.dfy
git-issue-324.dfy(27,18): Error: The abstract import named Impl1 (using :) may only occur within an abstract module declaration
1 resolution/type errors detected in git-issue-324.dfy
git-issue-324.dfy(27,18): Error: The abstract import named Impl1 (using :) may only occur within an abstract module declaration
1 resolution/type errors detected in git-issue-324.dfy
git-issue-324.dfy(27,18): Error: The abstract import named Impl1 (using :) may only occur within an abstract module declaration
1 resolution/type errors detected in git-issue-324.dfy
git-issue-324.dfy(27,18): Error: The abstract import named Impl1 (using :) may only occur within an abstract module declaration
1 resolution/type errors detected in git-issue-324.dfy
